--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,9 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   rospy
   std_msgs
+  geometry_msgs
+  sensor_msgs
+  genmsg
 )
 
 ## System dependencies are found with CMake's conventions
@@ -105,7 +108,13 @@ find_package(catkin REQUIRED COMPONENTS
 catkin_package(
 #  INCLUDE_DIRS include
 #  LIBRARIES watson_ins
-#  CATKIN_DEPENDS roscpp rospy std_msgs
+  CATKIN_DEPENDS 
+  roscpp 
+  rospy 
+  std_msgs 
+  sensor_msgs 
+  message_runtime 
+  geometry_msgs
 #  DEPENDS system_lib
 )
 
@@ -117,6 +126,7 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(
 # include
+  ${CMAKE_CURRENT_SOURCE_DIR}/include/watson_ins
   ${catkin_INCLUDE_DIRS}
 )
 
@@ -133,7 +143,7 @@ include_directories(
 ## Declare a C++ executable
 ## With catkin_make all packages are built within a single CMake context
 ## The recommended prefix ensures that target names across packages don't collide
-# add_executable(${PROJECT_NAME}_node src/watson_ins_node.cpp)
+add_executable(${PROJECT_NAME} src/watson_ins_node.cpp)
 
 ## Rename C++ executable without prefix
 ## The above recommended prefix causes long target names, the following renames the
@@ -146,9 +156,9 @@ include_directories(
 # add_dependencies(${PROJECT_NAME}_node ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Specify libraries to link a library or executable target against
-# target_link_libraries(${PROJECT_NAME}_node
-#   ${catkin_LIBRARIES}
-# )
+target_link_libraries(${PROJECT_NAME}
+  ${catkin_LIBRARIES}
+)
 
 #############
 ## Install ##
