--- a/package.xml
+++ b/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <package format="2">
   <name>watson_ins</name>
-  <version>0.0.0</version>
+  <version>1.0.0</version>
   <description>The watson_ins package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag -->
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="aftermath@todo.todo">aftermath</maintainer>
+  <maintainer email="dpazruiz@ucsd.edu">David Paz</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -49,16 +49,24 @@
   <!-- Use doc_depend for packages you need only for building documentation: -->
   <!--   <doc_depend>doxygen</doc_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
+  
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
   <build_depend>std_msgs</build_depend>
-  <build_export_depend>roscpp</build_export_depend>
-  <build_export_depend>rospy</build_export_depend>
-  <build_export_depend>std_msgs</build_export_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  
+  <!--<build_export_depend>roscpp</build_export_depend> -->
+  <!--<build_export_depend>rospy</build_export_depend> -->
+  <!--<build_export_depend>std_msgs</build_export_depend> -->
+  
   <exec_depend>roscpp</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
-
+  <exec_depend>message_runtime</exec_depend> 
+  <exec_depend>sensor_msgs</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
