--- a/package.xml
+++ b/package.xml
@@ -57,12 +57,14 @@
   <build_depend>sensor_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>serial</build_depend>
+  <build_depend>tf2</build_depend>
   
   <!--<build_export_depend>roscpp</build_export_depend> -->
   <!--<build_export_depend>rospy</build_export_depend> -->
   <!--<build_export_depend>std_msgs</build_export_depend> -->
   <exec_depend>roscpp</exec_depend>
   <exec_depend>serial</exec_depend>
+  <exec_depend>tf2</exec_depend>
   <exec_depend>rospy</exec_depend>
   <exec_depend>std_msgs</exec_depend>
   <exec_depend>message_runtime</exec_depend> 
